--- a/code/css/login.css
+++ b/code/css/login.css
@@ -1,5 +1,5 @@
 *{
-    margin: 0;/*prueba*/
+    margin: 0;/*prueba2*/
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
