--- a/code/css/login.css
+++ b/code/css/login.css
@@ -1,5 +1,5 @@
 *{
-    margin: 0;
+    margin: 0;/*pruebita*/
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
