--- a/code/css/login.css
+++ b/code/css/login.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
+    font-family: 'Dosis', sans-serif;
 }
 .conten-backImg-login{
   width: 100%;
@@ -81,6 +82,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 .login button div{
   margin-left: 10px;
@@ -88,6 +91,60 @@
 .login button:hover{
   background-color: #616d8b;
 }
+/***********MOSTRAR AVISOS*************/
+.body-aviso{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+.mensaje{
+  background-color: rgb(52 47 47 / 68%);
+  box-shadow: 0px 0px 10px 3px rgb(229 238 247 / 32%);
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  border-radius: 5px;
+  width: 300px;
+  text-align: center;
+}
+.mensaje span{
+  margin-bottom: 10px;
+  font-size: 13px;
+  color: #fff;
+  font-weight: 500;
+}
+.mensaje button{
+  background-color: #222a3f;
+    color: #fff;
+    outline: none;
+    border: none;
+    padding: 10px;
+    font-size: 14px;
+    cursor: pointer;
+    letter-spacing: 1px;
+    font-weight: 600;
+    border-radius: 5px;
+}
+.mensaje button:hover{
+  background-color: #616d8b;
+}
+.mensaje .fa-regular, .mensaje .fa-solid{
+  font-size: 90px;
+  transition: transform 1s;
+  transform: rotate(360deg);
+  margin-bottom: 15px;
+}
+.fa-circle-xmark,.fa-circle-exclamation,.fa-circle-check{
+  color: #fff;
+}
+/**************************************/
 /***********LOADER************/
 .loader,
 .loader:after {
