--- a/code/css/antropometria.css
+++ b/code/css/antropometria.css
@@ -21,25 +21,60 @@
     padding: 20px;
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,.25);
 }
-.datos-child{
+.datos__child{
     display: flex;
+    padding: 10px 0;
+}
+.datos__input{
+    width: 200px;
+    height: auto;
+    padding: 7px;
+    border: 1px solid #ced4da;
+    outline: none;
+    color: #495057;
+    background-color: #fff;
+    line-height: 1.5;
+    background-clip: padding-box;
+    border-radius: 5px;
+    transition: all .15s ease;
+}
+.datos__input:focus{
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 2px rgba(0,123,255,.25);
+}
+.datos__input::-webkit-inner-spin-button, 
+.datos__input::-webkit-outer-spin-button{
+    -webkit-appearance: none;
+    margin: 0;
 }
 label{
     width: 150px;
 }
 .button{
     display: flex;
+    padding-left: 100px;
+    margin-top: 10px;
 }
 .btn__antrop{
     width: 150px;
-    padding: 5px;
-    border: none;
+    padding: 10px;
+    border: 1px solid transparent;
+    border-radius: 5px;
     background-color: #cacbd5;
     color: #fff;
     cursor: pointer;
+    color: #CCD1D1;
+    background-color: #338ef0;
+    font-weight: bold;
+    transition: all .5s ease;
 }
 .btn__antrop:hover{
   outline: 1px solid rgba(211, 210, 213, 0.7);
+  background-color: #1782f4;
+}
+.btn__antrop:focus{
+    box-shadow: 0 0 0 2px rgba(0,123,255,.5);
 }
 .resultado{
     width: 100%;
@@ -71,5 +106,22 @@ td,th{
     justify-content: center;
 }
 .btn__guardar{
-    width: 100px;
+    width: 200px;
+    padding: 10px;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    background-color: #cacbd5;
+    color: #fff;
+    cursor: pointer;
+    color: #CCD1D1;
+    background-color: #338ef0;
+    font-weight: bold;
+    transition: all .5s ease;
+}
+.btn__guardar:hover{
+    outline: 1px soid rgba(211, 210, 213, 0.7);
+    background-color: #1782f4;
+}
+.btn__guardar:focus{
+    box-shadow: 0 0 0 2px rgba(0,123,255,.5);
 }
