--- a/code/css/code.css
+++ b/code/css/code.css
@@ -5,6 +5,61 @@
   font-family: 'Dosis', sans-serif;
 }
 
+/*BOTON ENVIAR*/
+.enviar{
+  background-color: #338ef0;
+  border: none;
+  padding: 15px;
+  color: #fff;
+  margin-top: 10px;
+  width: 150px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: all .5s ease;
+}
+.enviar:hover{
+  outline: 1px solid rgba(211, 210, 213, 0.7);
+  background-color: #1782f4;
+}
+.enviar:focus{
+  box-shadow: 0 0 0 2px rgba(0,123,255,.5);
+}
+/*BOTON GUARDAR*/
+.guardar{
+  background-color: #338ef0;
+  border: none;
+  padding: 10px;
+  color: #fff;
+  width: 150px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: all .5s ease;
+}
+.guardar:hover{
+  outline: 1px solid rgba(211, 210, 213, 0.7);
+  background-color: #1782f4;
+}
+.guardar:focus{
+  box-shadow: 0 0 0 2px rgba(0,123,255,.5);
+}
+/*RESULTADO*/
+.resultado{
+  background-color: #338ef0;
+  border: none;
+  padding: 10px;
+  color: #fff;
+  width: 150px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: all .5s ease;
+}
+.resultado:hover{
+  outline: 1px solid rgba(211, 210, 213, 0.7);
+  background-color: #1782f4;
+}
+.resultado:focus{
+  box-shadow: 0 0 0 2px rgba(0,123,255,.5);
+}
 /********************** HEADER *******************/
 
 .header{
