--- a/code/css/registro.css
+++ b/code/css/registro.css
@@ -1,9 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    box-sizing: border-box;
-  }
+
   body{
     width: 100%;
     height: 100%;
@@ -27,12 +22,12 @@
     color: #CCD1D1;
     max-width: 650px;
     min-width: 450px;
-    background-color: rgba(0, 0, 0,.7);
+    background-color: #fff;
+    box-shadow: 2px 2px 20px 0px rgba(0,0,0,.25);
     border-radius: 3px;
+    padding: 20px;
   }
-  .form__title{
-    margin-top: 15px;
-  }
+
   .form__content{
     width: 100%;
     display: flex;
@@ -41,62 +36,38 @@
   }
   .form__input{
     margin-top: 15px;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .1);
     border: none;
     outline: none;
     border-bottom: 2px solid #fff;
-    padding: 12px;
+    padding: 15px 10px;
     margin-bottom: 10px;
-    border-radius: 2px;
+    border-radius: 5px;
     font-size: 14px;
-    color: #CCD1D1;
+    color: #000;
     transition: all .5s ease;
   }
   .form__input:hover{
-    background: rgba(0, 0, 0, .7);
+    background: rgba(0, 0, 0, .2);
   }
+  .form__input::-webkit-inner-spin-button, 
+.form__input::-webkit-outer-spin-button{
+    -webkit-appearance: none;
+    margin: 0;
+}
   .form__h3{
     margin-top: 10px;
     font-weight: normal;
   }
-  .form__sexo{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 100px;
-    height: 30px;
-    line-height: 2;
-    background: rgba(0, 0, 0, .7);
-    overflow: hidden;
-    border-radius: 3px;
-  }
-  .form__sexo::after{
-    content: '\25BC';
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 0 5px;
-    background: rgba(0, 0, 0, .7);
-    cursor: pointer;
-    pointer-events: none;
-    transition: .25s all ease;
-  }
-  .form__sexo:hover:after{
-    color: rgba(255, 255, 255, .5);
-  }
   .sexo{
-    color: #CCD1D1;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
+    color: #000;
     outline: 0;
     box-shadow: none;
     border: 0;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(0, 0, 0, .1);
     background-image: none;
     flex: 1;
-    padding: 0px 10px;
+    padding: 10px 10px;
     cursor: pointer;
     font-size: 15px;
   }
@@ -112,14 +83,20 @@
   .form__btn{
     margin-top: 15px;
     outline: none;
-    background: rgba(0, 0, 0, .8);
+    background: rgba(0, 0, 0, .1);
     font-size: 16px;
     border: none;
-    color: #CCD1D1;
+    color: #000;
     padding: 15px 0px;
     cursor: pointer;
+    border-radius: 5px;
     transition: all .5s ease;
   }
+  .btn{
+    width: 100%;
+    justify-content: center;
+    display: flex;
+  }
   .form__btn:hover{
-    background: rgba(0, 0, 0, .6);
+    background: rgba(0, 0, 0, .2);
   }
