--- a/code/css/antropometria.css
+++ b/code/css/antropometria.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: auto;
     display: flex;
-    
+    padding: 50px;
 }
 
 .datos{
@@ -58,20 +58,6 @@ label{
     justify-content: center;
     align-items: center;
     padding: 50px;
-}
-
-table{
-    border-collapse: collapse;
-    width: 100%;
-}
-th{
-    background-color: rgba(0, 0, 0, .7);
-    color: #CCD1D1;
-}
-td,th{
-    border: 2px solid rgba(0, 0, 0, .7);
-    padding: 10px 20px 10px 20px;
-    height: 40px;
 }
 
 .btn__guardar{
