--- a/code/css/code.css
+++ b/code/css/code.css
@@ -24,12 +24,18 @@
 .enviar:focus{
   box-shadow: 0 0 0 2px rgba(0,123,255,.5);
 }
-/*BOTON GUARDAR*/
-.guardar{
+
+.guardar, .cargar, .resultado{
   background-color: #338ef0;
+  font-size: 12px;
   border: none;
   padding: 15px;
   color: #fff;
+  cursor: pointer;
+  width: 140px;
+}
+/*BOTON GUARDAR*/
+.guardar{
   width: 150px;
   cursor: pointer;
   border-radius: 5px;
@@ -46,7 +52,6 @@
 .cargar{
   background-color: #338ef0;
   border: none;
-  padding: 15px;
   color: #fff;
   margin-top: 10px;
   width: 150px;
@@ -63,12 +68,6 @@
 }
 /*RESULTADO*/
 .resultado{
-  background-color: #338ef0;
-  border: none;
-  padding: 10px;
-  color: #fff;
-  width: 150px;
-  cursor: pointer;
   border-radius: 5px;
   transition: all .5s ease;
 }
@@ -95,11 +94,30 @@ th{
 }
 td,th{
   border-color: inherit;
-  /*padding: 10px 20px 10px 20px;*/
-  padding: 8px;
+  padding: 2px;
   vertical-align: middle;
   border-bottom: 1px solid #dee2e6;
-  height: 40px;
+  font-size: 13px;
+}
+td{
+  width: 30px;
+  position: relative;
+}
+td input{
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: none;
+  width: 100%;
+  height: 100%;
+  outline: 1px solid #80bdff;
+}
+.tbl__resultado td div{
+  padding: 10px;
+  text-align: center;
+}
+.tbl__resultado tr th{
+  font-size: 13px;
 }
 
 /*INPUT*/
@@ -121,7 +139,7 @@ td,th{
     outline: 0;
     box-shadow: 0 0 0 2px rgba(0,123,255,.25);
 }
-.input::-webkit-inner-spin-button, 
+.input::-webkit-inner-spin-button,
 .input::-webkit-outer-spin-button{
     -webkit-appearance: none;
     margin: 0;
