--- a/code/css/code.css
+++ b/code/css/code.css
@@ -230,15 +230,16 @@ td input{
 .body{
   display: flex;
   width: 100%;
-  min-height: 100%;
+  height: calc(100vh - 100px);
 }
 .menu{
   width: 200px;
-  min-height: calc(100vh - 100px);
+  height: 100%;
   background-color: rgba(0, 0, 0, .8);
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-y: auto;
 }
 .buscar{
   width: 90%;
@@ -289,7 +290,7 @@ td input{
 }
 .list{
   width: 100%;
-  height: calc(100vh - 150px);
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -344,8 +345,9 @@ td input{
   line-height: 0.5;
 }
 .content{
-  width: calc(100% - 200px);
+  max-width: calc(100% - 200px);
   background-color: #f5f5f5;
+  overflow: auto;
 
 }
 .content__opcion{
