--- a/code/css/code.css
+++ b/code/css/code.css
@@ -111,6 +111,7 @@ td input{
   border: none;
   width: 100%;
   height: 100%;
+  text-align: center;
   outline: 1px solid #80bdff;
 }
 .tbl__resultado td div{
