--- a/code/css/code.css
+++ b/code/css/code.css
@@ -209,6 +209,7 @@ td input{
   top: 100px;
   right: 50px;
   width: 100%;
+  background-color: #fff;
   box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, .2);
   color: #000;
   display: flex;
@@ -287,7 +288,7 @@ td input{
 }
 .fa-solid{
   margin-left: 10px;
-  color: #fff;
+  color: #b8a6a6;
   font-size: 15px;
 }
 .opciones .list__button:hover{
@@ -316,7 +317,7 @@ td input{
   cursor: pointer;
   transition: all .5s ease;
   padding-left: 10px;
-  font-size: 13px;
+  font-size: 11.5px;
 }
 .list__item.activo{
   background-color: rgba(255, 255, 255, .1);
@@ -354,9 +355,10 @@ td input{
 }
 .content{
   width: calc(100% - 200px);
-  min-width: 800px;
+  min-width: 1000px;
   background-color: #f5f5f5;
   overflow: auto;
+  padding: 50px 20px;
 }
 .content__opcion{
   position: absolute;
