--- a/code/css/registro.css
+++ b/code/css/registro.css
@@ -7,15 +7,12 @@
 
   .content__registro{
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 200px;
   }
   .form{
-    width: 100%;
-    height: auto;
+    width: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,19 +28,20 @@
   .form__content{
     width: 100%;
     display: flex;
-    padding: 10px 120px 30px 120px;
     flex-direction: column;
+    align-items: center;
   }
   .form__input{
-    margin-top: 15px;
+    width: 250px;
+    margin-top: 10px;
     background: rgba(0, 0, 0, .1);
     border: none;
     outline: none;
     border-bottom: 2px solid #fff;
-    padding: 15px 10px;
+    padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 12px;
     color: #000;
     transition: all .5s ease;
   }
@@ -60,16 +58,17 @@
     font-weight: normal;
   }
   .sexo{
-    color: #000;
+    color: #7c7c7c;
+    width: 250px;
     outline: 0;
     box-shadow: none;
     border: 0;
     background: rgba(0, 0, 0, .1);
-    background-image: none;
-    flex: 1;
-    padding: 10px 10px;
+    padding: 10px;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 12px;
+    margin-bottom: 10px;
+    margin-top: 10px;
   }
   .sexo::-ms-expand{
     display: none;
@@ -79,6 +78,18 @@
   }
   .fecha{
     margin-top: 10px;
+    margin-bottom: 10px;
+    width: 250px;
+    outline: 0;
+    box-shadow: none;
+    border: 0;
+    background: rgba(0, 0, 0, .1);
+    background-image: none;
+    flex: 1;
+    padding: 10px;
+    cursor: pointer;
+    color: #7c7c7c;
+    font-size: 12px;
   }
   .form__btn{
     margin-top: 15px;
