--- a/code/css/inter_alimentos.css
+++ b/code/css/inter_alimentos.css
@@ -14,12 +14,12 @@
     box-shadow: 0px 0px 7px 1px rgba(0,0,0,.25);
     background: #fff;
     margin-bottom: 15px;
+    padding: 10px 0;
 }
 .datos__intal{
     width: 280px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     padding-bottom: 20px;
     padding-left: 20px;
 }
@@ -36,18 +36,17 @@
 .table__left{
     width: calc(100% - 280px);
     display: flex;
-    padding: 50px 10px;
 }
 .table__right{
     width: 100%;
     display: flex;
-    padding: 50px 20px;
+    padding: 0 20px;
 }
 
 .table__tp{
     width: 100%;
     display: flex;
-    padding: 50px 20px;
+    padding: 0 20px;
 }
 th{
     font-size: 11px;
